# Masques

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STORY.md  STORY_RESPONSE.md  build.zig  build.zig.zon  plugin.json  progress-v1.2-mcp.md  progress.md
.beads/: daemon-error  issues.jsonl
.claude/: masques.local.md
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
commands/: audience.md  doff.md  don.md  id.md  inspect.md  list.md  otel.md  performance.md  sync-manifest.md  whoami.md
docs/: concepts.md  evaluation.md  getting-started.md  implementation.md  mcp-server.md  otel-setup.md  prd-v1.0-core-loop.md  prd-v1.1-persistent-audience.md  prd-v1.2-mcp-server.md  progress-v1.0.md  reflection.md  schema.md  span-classification-spec.md  teams.md  trust-rings.md  vision.md
evals/: .gitignore  README.md  promptfooconfig.yaml
hooks/: session-start.sh
personas/: alpha.masque.yaml  architect.masque.yaml  chairman.masque.yaml  chartwright.masque.yaml  chief.masque.yaml  closer.masque.yaml  codesmith.masque.yaml  collie.masque.yaml  comptroller.masque.yaml  counsel.masque.yaml  crucible.masque.yaml  easel.masque.yaml  familiar.masque.yaml  firekeeper.masque.yaml  foreman.masque.yaml  fulcrum.masque.yaml  gilder.masque.yaml  glyph.masque.yaml  grinder.masque.yaml  herald.masque.yaml  kiln.masque.yaml  lathe.masque.yaml  loom.masque.yaml  manifest.yaml  mirror.masque.yaml  operator.masque.yaml  orchard.masque.yaml  palimpsest.masque.yaml  parallax.masque.yaml  pathfinder.masque.yaml  prima.masque.yaml  retro.masque.yaml  reviewer.masque.yaml  steersman.masque.yaml  stencil.masque.yaml  steward.masque.yaml  technologist.masque.yaml  weaver.masque.yaml  witness.masque.yaml
rings/: README.md
schemas/: masque.schema.yaml
scripts/: postinstall.sh
services/core/: README.md  pyproject.toml
services/core/src/masques_core/: __init__.py  core.py  model.py  ports.py  sidecar.py
services/core/src/masques_core/schemas/: persona-config.schema.yaml
services/core/tests/: test_core.py
services/mcp/: .gitignore  README.md  pyproject.toml
services/mcp/src/masques_mcp/: __init__.py  cli.py  core.py  server.py  session.py
services/mcp/tests/: test_core.py  test_parity.py  test_server.py
sql/: 001_create_database.sql  002_identities.sql  003_ledger.sql  (+4 more)
(+94 files in other folders)
