[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "masques-core"
version = "0.1.0"
description = "Portable Masques core — resolve/compose a Persona (pinned identity + operational sidecar) with zero infrastructure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chris Baldwin", email = "chrisdbaldwin@gmail.com" }
]
keywords = ["masques", "agent-identity", "persona"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/masques_core"]

[tool.ruff]
line-length = 100
target-version = "py311"
