[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "masques-mcp"
version = "0.1.0"
description = "Masques as an MCP server — compose/list/inspect/don/score masques over one tool-agnostic core"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chris Baldwin", email = "chrisdbaldwin@gmail.com" }
]
keywords = ["mcp", "masques", "agent-identity", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.14",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
]

[project.scripts]
masque = "masques_mcp.cli:main"
masques-mcp = "masques_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/masques_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
